--- a/CRUD Web Application/appsettings.json
+++ b/CRUD Web Application/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server: (localdb)\\MSSQLLocalDB;Database:CRUD;Trusted_Connection:True;"
+        "DefaultConnection": "Server= (localdb)\\MSSQLLocalDB;Database=CRUD;Trusted_Connection=True;"
     }
 }
